<resources>
    <string name="app_name">Olympics2016</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="news">News</string>
    <string name="modalities">Modalities</string>
    <string name="athletes">Athletes</string>
    <string name="transmission_pubs">Transmission Pubs</string>
    <string name="title_activity_search">Search</string>
    <string name="title_modality_list">Modalities</string>
    <string name="title_modality_detail">Modality Detail</string>
    <string name="title_athlete_list">Athletes</string>
    <string name="title_athlete_detail">Athlete Detail</string>
    <string name="title_transmission_list">Transmissions</string>
    <string name="title_transmission_detail">Transmission Detail</string>
    <string name="title_activity_news">News</string>
    <string name="athlete_age">Age</string>
    <string name="athelete_modality">Modality</string>
    <string name="athelete_bio">Bio</string>
    <string name="title_activity_transmissions">Map</string>
    <string name="transmission_place">Place</string>
    <string name="transmission_description">Description</string>
    <string name="transmission_date">Date</string>
    <string name="title_activity_map">Map</string>
</resources>
