<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_modalities"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/modalities" />
        <item
            android:id="@+id/nav_athletes"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/athletes" />
        <item
            android:id="@+id/nav_transmission"
            android:icon="@drawable/ic_theaters_black_24dp"
            android:title="@string/transmission_pubs" />
    </group>

    <item android:title="Favoritos"
        android:id="@+id/favorites">
        <menu>
            <item android:title="Usain Bolt" />
            <item android:title="Michael Phelps" />
            <item android:title="Michael Phelps" />
            <item android:title="Michael Phelps" />
            <item android:title="Michael Phelps" />
            <item android:title="Michael Phelps" />
            <item android:title="Michael Phelps" />
            <item android:title="Michael Phelps" />
        </menu>
    </item>

</menu>
